# Pointcloud_Convolutional_VAE

./: .gitignore  CMakeLists.txt  README.md  package.xml
encoder_model/box2_more_stoned_30/: network_and_training_summary.txt
encoder_model/box2_more_stoned_30/epoch_0128/: cp-.ckpt.index
encoder_model/final_world/: network_and_training_summary.txt
encoder_model/final_world/epoch_0024/: cp-.ckpt.index
encoder_model/random world/: network_and_training_summary.txt
encoder_model/random world/epoch_0256/: checkpoint  cp-.ckpt.index
lut/: x_lut.pickle  z_lut.pickle
msg/: LatSpace.msg
pickelled/large_obstacles/: .xdp_large_ex.DDY6Z0
saved_model_weights/26-2_11:37/: cp-0000.ckpt.index
scripts/: Autoencoder_3D_inspector.py  CVAE_visual_evaluator.py  Convolutional_variational_autoencoder.py  Minimal_convolutional_variational_autoencoder.py  PC2_subscriber.py  PC2_to_3Darray_sub.py  TSDF_encoder.py  TSDF_input_visualizer.py  batch_pointcloud_vae_trainer.py  dataset_extractor.py  dataset_shuffler.py  gazebo_env_scrambler.py  lut_creator.py  obstacles.txt  overfitted_gazebo_env_scrambler.py  pointcloud_vae.py  pointcloud_vae_trainer.py  randomized_increasing_difficulty_world.py  randomized_test_environment.py  randomized_world_generator.py  tensor_visualizer.py
scripts/CVAE_infrastructure/: Convolutional_variational_autoencoder.py  PC2_to_3Darray_sub.py  TSDF_encoder.py  dataset_shuffler.py  pointcloud_vae_trainer.py
scripts/Simulation_scrambling_scripts/: gazebo_env_scrambler.py  overfitted_gazebo_env_scrambler.py  randomized_test_environment.py
src/: pc2_to_open3D.cpp
srv/: scramble.srv
